--- a/requirements.txt
+++ b/requirements.txt
@@ -25,5 +25,6 @@ sqlalchemy-serializer==1.4.12
 typing-extensions==4.12.2; python_version >= '3.8'
 werkzeug==3.0.3; python_version >= '3.8'
 zipp==3.19.2; python_version >= '3.8'
+flask_bcrypt
 #python-dotnev
 
